# telegram_bot

./: CMakeLists.txt  README.md  intex.html
bot/: CMakeLists.txt  bot.cpp  bot.h
bot_executable/: CMakeLists.txt  main.cpp
client/: CMakeLists.txt  client.cpp  client.h
help/: index.html  intex.html
weather_client/: CMakeLists.txt  weather_client.cpp  weather_client.h
